# klab-templates

./: .gitattributes  Readme.adoc
_common/: .gitattributes
csharp/_common/: .editorconfig
csharp/generic/: .editorconfig  .gitattributes  .runsettings  Changelog.md  Creatorly.SolutionName.sln  Directory.Build.props  Justfile  Readme.md  creatorly.solution_name.sln  creatorly.yml  nuget.config  todo_after_creatorly.md  {{ creatorly.solution_name }}.sln
csharp/generic/.azuredevops/: azure-pipelines.yml
csharp/generic/.github/workflows/: ci.yml
csharp/generic/src/Creatorly.SolutionName.Core/: Demo.cs  packages.lock.json
csharp/generic/src/Creatorly.SolutionName.Core.Tests/: Creatorly.SolutionName.Core.Tests.csproj  DemoTests.cs
csharp/generic/src/creatorly.solution_name.Core/: Demo.cs
csharp/generic/src/creatorly.solution_name.Core.Tests/: DemoTests.cs  creatorly.solution_name.Core.Tests.csproj
csharp/generic/src/{{ creatorly.solution_name }}.Core.Tests/: DemoTests.cs  (+1 more)
python/generic/: .editorconfig  Justfile  LICENSE  Readme.md  creatorly.yml  docs  pyproject.toml
python/generic/.azuredevops/: azure-pipelines.yml
python/generic/.github/workflows/: ci.yml
python/generic/docs/: architecture
python/generic/src/creatorly_project_slug/: hello_world.py
python/generic/src/{{ creatorly.project_slug }}/: hello_world.py
python/generic/tests/: test_example.py
rust/generic/: .editorconfig  .gitattributes  Cargo.toml  Justfile  Readme.md  creatorly.yml
rust/generic/.devcontainer/: Dockerfile  devcontainer.json
rust/generic/.github/: ci.yml  release.yml
rust/generic/src/: main.rs
(+4 files in other folders)
