[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "creatorly_project_slug"
version = "0.0.1"
description = "creatorly_project_description"
authors = [
    "creatorly_author <creatorly_author_email>",
]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "Readme.md"
homepage = "https://github.com"
repository = "https://github.com"
documentation = "https://github.com"
classifiers = [
    # https://pypi.org/classifiers/
]
packages = [{include = "creatorly_project_slug", from = "src"}]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/<tbd>/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.0"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.6.0"
bump2version = "^1.0.1"
pyinstaller = "^4.1"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover", 
    "raise NotImplementedError", 
    "if __name__ == .__main__.:", 
    "if 0:", 
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 120

[tool.isort]
line_length=120
src_paths=["creatorly_project_slug", "tests"]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
combine_as_imports=true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = "tests"
